# opendcs-core

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  index.html  opendcs.doap  params.json
data/: Makefile.am  dcs-0.1.pc.in
dcs/: Makefile.am  config.vapi  dcs-0.1.deps  device-information.vala  device.vala  filelist.mk  object.vala
doc/: Makefile.am
doc/design/: opendcs.xmind  uml.xmi
doc/rtd/: Makefile.am  Makefile.sphinx
docs/design/: opendcs.xmind
docs/rtd/source/: conf.py  index.rst
examples/: minimal.js  minimal.lua  minimal.pl  minimal.py
examples/rust/minimal/: Cargo.toml
examples/rust/minimal/src/: minimal.rs
po/: POTFILES.in
src/: Makefile.am
src/dcs-hmi/: .gitignore  Makefile.am
src/dcs-monitor/: .gitignore  main.vala
src/dev/: Makefile.am  main.c  main.vala
src/hmi/: main.vala
src/libdcs-devices/: .gitignore  Makefile.am  util.vala
src/libdcs-devices/mux/: .gitignore
src/mux/: Makefile.am  main.c  main.vala
src/top/: Makefile.am
test/: .gitignore  Makefile.am
tests/: Makefile.am  sub.vala
