include $(top_srcdir)/build/autotools/automake/defaults.mk

noinst_PROGRAMS = $(TEST_PROGS)

TEST_PROGS += \
	$(NULL)

test_VALAFLAGS = \
	$(VALAFLAGS) \
	--basedir $(top_srcdir) \
	$(NULL)

test_CPPFLAGS = \
	$(NULL)

test_LDADD = \
	$(NULL)

### individual test applications

#sub_SOURCES = sub.vala
#sub_VALAFLAGS = $(test_VALAFLAGS)
#sub_CPPFLAGS = $(test_CPPFLAGS)
#sub_LDADD = $(test_LDADD)
